# resumy

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  proxy.ts  tailoring_prompt.md
app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  sitemap.ts
components/: admin-dashboard.tsx  analysis-report-modal.tsx  app-blocking-overlay.tsx  app-client-providers.tsx  auth-shell.tsx  cover-letter-modal.tsx  design-studio.tsx  gemini-router-control.tsx  gemini-settings.tsx  generation-comparison.tsx  generation-history.tsx  login-form.tsx  logout-button.tsx  membership-panel.tsx  navbar.tsx  page-hero.tsx  profile-form.tsx  public-resume-view.tsx  resume-manager.tsx  retail-workspace.tsx  signup-form.tsx  tailor-docx-editor.tsx  tailored-resume-preview.tsx  task-queue-panel.tsx
hooks/: useResumeTailoringStream.ts
lib/: admin.ts  ai-provider.ts  ai-usage-tracker.ts  ai-usage.ts  aiService.ts  article.ts  articles.ts  auth.ts  background-task-service.ts  background-task.ts  chromium.ts  ckeditor-client.ts  client-api.ts  client-download.ts  client-editor-html.ts  client-editor-pagination.ts  cn.ts  contact-info.ts  countries.ts  db.ts  design-template.ts  editor-document.ts  editor-html-parser.ts  file-upload.ts  gemini-router.ts  gemini-validator.ts  generation.ts  huggingface-parser.ts  huggingface-router.ts  id.ts  job-description.ts  location-display.ts  location.ts  mongodb.ts  (+18 more)
taskiq_worker/: README.md  __init__.py  bridge.py  broker.py  config.py  pyproject.toml  railpack.json  railway.toml  requirements.txt  run_service.py  tasks.py
(+129 files in other folders)
