[project]
name = "resume-foundry-taskiq-worker"
version = "0.1.0"
description = "Taskiq worker sidecar for Resume Foundry background tasks."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.28.1",
  "redis==7.1.0",
  "taskiq>=0.12.0,<1",
  "taskiq-redis==1.2.2",
  "uvicorn==0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
